After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 690041 - pygobject can't manage a caller-allocated out GArray
pygobject can't manage a caller-allocated out GArray
Status: RESOLVED FIXED
Product: pygobject
Classification: Bindings
Component: introspection
Git master
Other Linux
: Normal normal
: ---
Assigned To: Nobody's working on this now (help wanted and appreciated)
Python bindings maintainers
Depends on:
Blocks:
 
 
Reported: 2012-12-11 12:36 UTC by Gonzalo Odiard
Modified: 2012-12-17 20:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed test for gobject-introspection (1.93 KB, patch)
2012-12-11 13:57 UTC, Gonzalo Odiard
committed Details | Review
Add support for caller-allocated GArray out arguments (4.88 KB, patch)
2012-12-17 17:03 UTC, Martin Pitt
committed Details | Review

Description Gonzalo Odiard 2012-12-11 12:36:09 UTC
After solving a introspection issue in get_text method in vte library (#690003 and #676999, we still can't use a caller-allocated out GArray.

A test case is available here [2]

You need use vte-0-34 branch in git.

[1] https://bugzilla.gnome.org/show_bug.cgi?id=690003
[2] http://bugzilla-attachments.gnome.org/attachment.cgi?id=214263
Comment 1 Gonzalo Odiard 2012-12-11 13:57:54 UTC
Created attachment 231258 [details] [review]
Proposed test for gobject-introspection
Comment 2 Martin Pitt 2012-12-17 15:21:24 UTC
Comment on attachment 231258 [details] [review]
Proposed test for gobject-introspection

Thanks! I fixed the wrong datatype in g_array_append_val(), and brushed up the log:

http://git.gnome.org/browse/gobject-introspection/commit/?id=f885e3ecce5e4f1df19659b76a89598d5df4fab5

I also added a test case to pygobject which calls the new API and reproduces the bug:

http://git.gnome.org/browse/pygobject/commit/?id=f262320ac22b48a9d007c425633f3ca426b7fb4a

Thanks!
Comment 3 Martin Pitt 2012-12-17 17:03:23 UTC
Created attachment 231742 [details] [review]
Add support for caller-allocated GArray out arguments

With this patch caller-allocated GArray out arguments work. Review appreciated!
Comment 4 Martin Pitt 2012-12-17 20:49:10 UTC
I'd like to have this in 3.7.3 which is due today. This is covered by tests and
not all that complex, so I pushed the fix.