Add support for caller-allocated GArray out arguments

https://bugzilla.gnome.org/show_bug.cgi?id=690041